--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "angular-ui-bootstrap": "2.5.6",
     "fng-bootstrap-datetime": "^0.12.0-beta.243",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "rrule": "^2.8.1"
   },
   "devDependencies": {
-    "chai": "4.3.10",
-    "express": "^4.17.2",
+    "chai": "^4.4.1",
+    "express": "4.18.3",
     "express-namespace": "~0.1.1",
     "gulp": "^4.0.2",
     "gulp-angular-templatecache": "3.0.1",
@@ -37,7 +37,7 @@
     "karma-chai": "~0.1.0",
     "karma-chrome-launcher": "3.2.0",
     "karma-expect": "^1.1.0",
-    "karma-firefox-launcher": "2.1.2",
+    "karma-firefox-launcher": "2.1.3",
     "karma-jquery": "^0.2.4",
     "karma-mocha": "^2.0.1",
     "karma-mocha-debug": "0.1.2",
